--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstFragment"
+    tools:context=".SearchFragment"
     tools:visibility="visible">
 
     <TextView
@@ -22,6 +22,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="300dp"
         android:ems="10"
+        android:hint="@string/editText_login"
         android:inputType="text"
         android:selectAllOnFocus="false"
         android:singleLine="true"
