--- a/app/src/main/res/layout/fragment_student_projects.xml
+++ b/app/src/main/res/layout/fragment_student_projects.xml
@@ -30,6 +30,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_projects_list"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <Button
             android:id="@+id/btn_prev_page"
             android:layout_width="50dp"
@@ -39,7 +48,7 @@
             android:textAlignment="center"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView_projects" />
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView_projects_list" />
 
         <TextView
             android:id="@+id/textView_page"
@@ -51,7 +60,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView_projects" />
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView_projects_list" />
 
         <Button
             android:id="@+id/btn_next_page"
@@ -62,23 +71,7 @@
             android:textAlignment="center"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView_projects" />
-
-        <ScrollView
-            android:id="@+id/scrollView_projects"
-            android:layout_width="391dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="50dp"
-            android:background="#3D4050"
-            android:backgroundTintMode="add"
-            android:contentDescription="@string/btn_projects"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-
-        </ScrollView>
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView_projects_list" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
