--- a/app/src/main/res/layout/student_project_view.xml
+++ b/app/src/main/res/layout/student_project_view.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/skill_item">
+    android:layout_height="@dimen/skill_item"
+    android:layout_marginTop="2dp">
 
     <View
         android:id="@+id/view_project_validated"
@@ -19,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:text="@string/textView_skill"
+        android:text="@string/textView_project"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:flow_horizontalAlign="start"
