--- a/app/src/main/res/layout/fragment_student_projects.xml
+++ b/app/src/main/res/layout/fragment_student_projects.xml
@@ -34,6 +34,10 @@
             android:id="@+id/recyclerView_projects_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarSize="5dp"
+            android:scrollbars="vertical"
+            android:verticalScrollbarPosition="right"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.9"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +58,7 @@
             android:id="@+id/textView_page"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:scrollbarStyle="outsideInset"
             android:text="0"
             android:textAlignment="center"
             android:textSize="40sp"
