--- a/app/src/main/res/layout/student_project_view.xml
+++ b/app/src/main/res/layout/student_project_view.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="30dp"
         android:text="@string/textView_project"
         android:textAlignment="textStart"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:flow_horizontalAlign="start"
         app:flow_verticalAlign="center"
@@ -36,6 +37,7 @@
         android:layout_marginEnd="30dp"
         android:text="0"
         android:textAlignment="textEnd"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:flow_horizontalAlign="end"
         app:flow_verticalAlign="center"
