fix design + night mode

--- a/app/src/main/res/layout/fragment_student_projects.xml
+++ b/app/src/main/res/layout/fragment_student_projects.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginBottom="36dp"
+        android:backgroundTint="@color/progress"
         android:text="@string/btn_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +37,7 @@
             android:layout_height="0dp"
             android:scrollbarAlwaysDrawVerticalTrack="true"
             android:scrollbarSize="5dp"
+            android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
             android:verticalScrollbarPosition="right"
             app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +50,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="20dp"
+            android:backgroundTint="@color/progress"
             android:text="@string/btn_prev_page"
             android:textAlignment="center"
             android:textSize="25sp"
@@ -72,6 +75,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/progress"
             android:text="@string/btn_next_page"
             android:textAlignment="center"
             android:textSize="25sp"
