--- a/app/src/main/res/layout/student_project_view.xml
+++ b/app/src/main/res/layout/student_project_view.xml
@@ -10,6 +10,7 @@
         android:id="@+id/view_project_validated"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="5sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
